--- a/school/index.html
+++ b/school/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="css/app.css?v=2">
+    <link rel="stylesheet" type="text/css" href="css/app.css?v=3">
     <title>mpro-school-game</title>
 <style>
     text{
@@ -636,7 +636,8 @@
                 <path d="M983.401 285.981L955.961 336.121L980.191 284.531L983.401 285.981Z" fill="#C25239"/>
                 <path d="M980.191 284.531C980.191 284.531 980.271 284.401 980.411 284.181C981.271 282.831 984.561 278.161 988.371 279.401L983.401 285.981" fill="#C25239"/>
             </g>
-            <g id="boy-invalid-state-1" class="d-none" onclick="showManip()">
+            <g onclick="showManip()" class="svg-hover">
+            <g id="boy-invalid-state-1" class="d-none">
             <path d="M977.4 915.457C1114.04 915.457 1224.8 908.504 1224.8 899.927C1224.8 891.35 1114.04 884.397 977.4 884.397C840.765 884.397 730 891.35 730 899.927C730 908.504 840.765 915.457 977.4 915.457Z" fill="#C6A67D"/>
             <path d="M1087.85 864.547L1093.58 882.127L1116.26 876.327L1113.43 861.327L1087.85 864.547Z" fill="#C25F1B"/>
             <path d="M1144.05 890.187L1097.4 901.097C1094.83 901.697 1092.25 900.097 1091.65 897.527L1089.7 889.207C1088.79 885.327 1091.2 881.447 1095.08 880.537L1126.69 873.147C1135.58 871.067 1144.47 876.587 1146.55 885.477L1146.66 885.967C1147.11 887.857 1145.94 889.747 1144.05 890.187Z" fill="black"/>
@@ -673,7 +674,7 @@
             <path d="M920.16 830.447C920.17 830.467 920.19 830.487 920.2 830.507C920.45 830.867 920.96 831.287 921.68 831.757C921.24 831.397 920.72 830.947 920.16 830.447Z" fill="#FFC4B3"/>
             <path d="M999.3 884.547C998.95 891.877 981.12 897.297 966.47 899.777C951.83 902.257 929.39 903.317 929.39 903.317L931.6 866.637L938.69 865.067L910.35 841.767C910.35 841.767 896.65 841.527 892.01 838.067C891.93 838.007 891.84 837.937 891.76 837.867C889.44 836.947 887.3 835.867 885.65 834.807C882.48 832.767 879.57 830.437 880.32 829.287C881.05 828.177 885.08 830.777 888.5 832.197C889.55 832.637 890.55 832.977 891.38 833.037C891.26 832.977 890.33 832.567 888.86 831.747C887.15 830.787 884.73 829.247 882.05 827.087C877.97 823.777 875.99 820.537 877.92 820.367C879.84 820.197 881.89 822.517 885.24 824.557C887 825.627 889.8 827.087 891.52 827.977C891.87 828.157 892.19 828.307 892.43 828.437C892.44 828.417 892.44 828.397 892.44 828.377C891.81 827.987 890.74 827.317 889.45 826.397C888.54 825.757 887.53 824.997 886.49 824.147C886.26 823.957 886.02 823.757 885.78 823.557C882.1 820.417 875.69 815.077 878.06 813.927C880.42 812.777 885.27 817.007 888.71 819.457C889.37 819.927 890.03 820.357 890.68 820.747C892.13 821.637 893.49 822.317 894.5 822.777C894.55 822.707 894.59 822.627 894.64 822.547C893.84 822.007 892.76 821.177 891.37 819.957C891.1 819.727 890.82 819.467 890.52 819.197C886.78 815.767 882.49 809.877 885.12 809.427C887.23 809.077 888.6 810.667 891.49 813.437C892.22 814.127 893.04 814.907 894.01 815.747C898.66 819.827 905.14 820.277 905.41 820.297C905.42 820.287 905.42 820.277 905.43 820.267C903.77 816.397 902.6 811.707 903.44 809.907C903.73 809.287 904.25 809.007 905.09 809.227C907.73 809.907 908.29 815.377 911.45 820.827C911.68 821.227 911.93 821.627 912.19 822.017C914.03 824.807 917.62 828.197 920.17 830.447C920.18 830.467 920.2 830.487 920.21 830.507C920.46 830.867 920.97 831.287 921.69 831.757C929.52 836.917 963.04 848.557 979.36 857.747C997.18 867.787 999.66 877.227 999.3 884.547Z" fill="#FFC4B3"/>
             </g>
-            <g id="boy-invalid-state-2" class="d-none" onclick="showManip()">
+            <g id="boy-invalid-state-2" class="d-none">
                 <path d="M979.4 914.051C1116.04 914.051 1226.8 907.098 1226.8 898.521C1226.8 889.944 1116.04 882.991 979.4 882.991C842.765 882.991 732 889.944 732 898.521C732 907.098 842.765 914.051 979.4 914.051Z" fill="#C6A67D"/>
                 <path d="M1157.26 889.901L1175.75 889.941L1177.32 866.581L1162.19 864.591L1157.26 889.901Z" fill="#C25F1B"/>
                 <path d="M1199.17 844.511L1194.97 892.231C1194.74 894.861 1192.42 896.811 1189.78 896.581L1181.27 895.831C1177.3 895.481 1174.37 891.981 1174.72 888.011L1177.57 855.671C1178.37 846.571 1186.39 839.851 1195.49 840.651L1195.99 840.691C1197.91 840.871 1199.34 842.581 1199.17 844.511Z" fill="black"/>
@@ -709,6 +710,7 @@
                 <path d="M896.47 912.091L877.67 898.601C867.81 891.531 865.56 877.811 872.63 867.951C879.7 858.091 893.42 855.841 903.28 862.911L922.08 876.401C928.12 880.731 929.5 889.141 925.17 895.181L915.26 909.001C910.92 915.041 902.51 916.421 896.47 912.091Z" fill="#FEB728"/>
                 <path d="M936.57 847.491C936.57 847.511 936.57 847.541 936.57 847.561C936.56 848.001 936.73 848.631 937.04 849.441C936.9 848.891 936.74 848.231 936.57 847.491Z" fill="#FFC4B3"/>
                 <path d="M969.35 937.581C964.79 943.331 947.14 937.341 933.8 930.821C920.46 924.301 901.61 912.081 901.61 912.081L924.79 883.561L931.46 886.411L922.01 850.961C922.01 850.961 911.02 842.781 909.26 837.261C909.23 837.161 909.2 837.061 909.18 836.951C907.83 834.851 906.72 832.731 906 830.901C904.61 827.391 903.61 823.801 904.89 823.311C906.13 822.831 907.89 827.301 909.84 830.441C910.44 831.421 911.06 832.271 911.69 832.801C911.62 832.681 911.11 831.801 910.4 830.281C909.57 828.501 908.5 825.841 907.59 822.521C906.21 817.451 906.48 813.671 908.15 814.651C909.81 815.641 910.12 818.711 911.65 822.321C912.45 824.221 913.88 827.041 914.76 828.761C914.94 829.111 915.11 829.421 915.23 829.661C915.25 829.651 915.26 829.641 915.27 829.621C914.99 828.941 914.51 827.761 914 826.271C913.64 825.221 913.25 824.011 912.91 822.721C912.84 822.431 912.75 822.131 912.68 821.821C911.52 817.121 909.42 809.051 912.02 809.491C914.6 809.931 916.09 816.201 917.45 820.191C917.71 820.961 918 821.691 918.3 822.381C918.96 823.951 919.67 825.301 920.22 826.261C920.3 826.231 920.38 826.191 920.47 826.151C920.14 825.251 919.74 823.941 919.33 822.141C919.25 821.801 919.16 821.421 919.08 821.031C918.04 816.061 917.99 808.771 920.38 809.941C922.3 810.881 922.48 812.971 923.22 816.921C923.41 817.911 923.63 819.021 923.92 820.271C925.32 826.301 930.32 830.441 930.53 830.621C930.54 830.621 930.55 830.611 930.56 830.611C931.47 826.501 933.25 822.011 934.98 821.031C935.57 820.691 936.16 820.781 936.72 821.431C938.46 823.521 935.73 828.291 935.13 834.561C935.09 835.021 935.06 835.491 935.04 835.961C934.91 839.301 935.85 844.151 936.61 847.461C936.61 847.481 936.61 847.511 936.61 847.531C936.6 847.971 936.77 848.601 937.08 849.411C940.44 858.171 960.89 887.161 968.79 904.151C977.39 922.721 973.9 931.841 969.35 937.581Z" fill="#FFC4B3"/>
+            </g>
             </g>
             <g id="invalid-sitdown" class="d-none">
             <path d="M953.38 915.339C1049.69 915.339 1127.76 908.386 1127.76 899.809C1127.76 891.232 1049.69 884.279 953.38 884.279C857.073 884.279 779 891.232 779 899.809C779 908.386 857.073 915.339 953.38 915.339Z" fill="#C6A67D"/>
@@ -747,7 +749,7 @@
             <path d="M835.46 761.52V737.48C835.46 724.88 845.67 714.67 858.27 714.67C870.87 714.67 881.08 724.88 881.08 737.48V761.52C881.08 769.24 874.82 775.5 867.1 775.5H849.44C841.72 775.5 835.46 769.24 835.46 761.52Z" fill="#FEB728"/>
             <path d="M866.75 699.051L899.62 702.971C899.62 702.971 895.79 712.951 894.39 712.651C892.99 712.351 873.39 710.651 870.53 708.931C867.67 707.211 867.61 701.241 867.4 701.071C867.19 700.881 866.75 699.051 866.75 699.051Z" fill="#EDAB25"/>
             </g>
-            <g id="boy-top-hand" class="d-none" onclick="sweetModal.cola()">
+            <g id="boy-top-hand" class="d-none svg-hover" onclick="sweetModal.cola()">
                 <path d="M1420.69 662.641H1411.82V748.761H1420.69V662.641Z" fill="#803918"/>
                 <path d="M1328.93 662.641H1320.06V748.761H1328.93V662.641Z" fill="#803918"/>
                 <path d="M1362.61 735.1H1341.75L1340.34 719.75H1362.23L1362.61 735.1Z" fill="white"/>
@@ -784,7 +786,7 @@
                 <path d="M1416.99 528.961H1323.76C1309.07 528.961 1297.16 538.131 1297.16 549.451V585.601C1297.16 591.971 1302.54 597.601 1310.44 599.481C1320.62 601.901 1338.61 604.041 1370.38 604.041C1402.15 604.041 1420.14 601.901 1430.32 599.481C1438.22 597.611 1443.6 591.971 1443.6 585.601V549.451C1443.6 538.131 1431.69 528.961 1416.99 528.961Z" fill="#803918"/>
                 <path d="M1416.99 531.66H1323.76C1309.07 531.66 1297.16 540.83 1297.16 552.15V588.3C1297.16 594.67 1302.54 600.3 1310.44 602.18C1320.62 604.6 1338.61 606.74 1370.38 606.74C1402.15 606.74 1420.14 604.6 1430.32 602.18C1438.22 600.31 1443.6 594.67 1443.6 588.3V552.15C1443.6 540.83 1431.69 531.66 1416.99 531.66Z" fill="#AA6C45"/>
             </g>
-            <g id="girl-top-hand" class="d-none">
+            <g id="girl-top-hand" class="d-none svg-hover" onclick="sweetModal.candy()">
                 <path d="M582.88 731.789H547.61V763.959H582.88V731.789Z" fill="#FEB728"/>
                 <path d="M580.52 769.319H549.97C548.67 769.319 547.61 768.259 547.61 766.959V760.289C547.61 756.339 550.81 753.139 554.76 753.139H575.74C579.69 753.139 582.89 756.339 582.89 760.289V766.959C582.89 768.259 581.83 769.319 580.52 769.319Z" fill="black"/>
                 <path d="M628.36 731.789H593.09V763.959H628.36V731.789Z" fill="#FEB728"/>
@@ -816,7 +818,7 @@
                 <path d="M634.61 510.629H541.37C526.68 510.629 514.77 522.539 514.77 537.229V584.159C514.77 592.429 520.15 599.739 528.05 602.179C538.23 605.319 556.22 608.099 587.99 608.099C619.76 608.099 637.75 605.319 647.93 602.179C655.83 599.749 661.21 592.429 661.21 584.159V537.229C661.21 522.539 649.3 510.629 634.61 510.629Z" fill="#803918"/>
                 <path d="M634.61 514.129H541.37C526.68 514.129 514.77 526.039 514.77 540.729V587.659C514.77 595.929 520.15 603.239 528.05 605.679C538.23 608.819 556.22 611.599 587.99 611.599C619.76 611.599 637.75 608.819 647.93 605.679C655.83 603.249 661.21 595.929 661.21 587.659V540.729C661.21 526.039 649.3 514.129 634.61 514.129Z" fill="#AA6C45"/>
             </g>
-            <g id="girl-bot-hand" class="d-none">
+            <g id="girl-bot-hand" class="d-none svg-hover" onclick="sweetModal.choco()">
                 <path d="M309.09 897.121H273.82V929.291H309.09V897.121Z" fill="#FEF9F6"/>
                 <path d="M306.73 934.641H276.18C274.88 934.641 273.82 933.581 273.82 932.281V925.611C273.82 921.661 277.02 918.461 280.97 918.461H301.95C305.9 918.461 309.1 921.661 309.1 925.611V932.281C309.1 933.581 308.04 934.641 306.73 934.641Z" fill="black"/>
                 <path d="M354.57 897.121H319.3V929.291H354.57V897.121Z" fill="#FEF9F6"/>
@@ -1704,18 +1706,18 @@
             </div>
         </div>
         <div class="operation-action">
-            <button class="btn-modal-second green" onclick="manipWindow.closeOperation()">Да</button>
-            <button class="btn-modal-second" onclick="manipWindow.closeOperation()">Нет</button>
+            <button class="btn-modal-second green"  data-btn="yes">Да</button>
+            <button class="btn-modal-second"  data-btn="no">Нет</button>
         </div>
         <div class="modal-doctor-error d-none" style="width: 100%;">
             <div class="modal-doctor-error_content">Состояние Димы не изменилось</div>
             <div class="modal-doctor-error_action">
-                <button class="btn-error" onclick="doctorWin.closeErrorWin()">Еще вариант</button>
+                <button class="btn-error" onclick="sweetModal.finalCandy()">Еще вариант</button>
             </div>
         </div>
     </div>
     <!-- ШОКОЛАДКА -->
-    <div class="modal-operation sweet d-none" id="modal-sweet-3">
+    <div class="modal-operation sweet  d-none" id="modal-sweet-3">
         <div class="operation-text">
             Дать съесть шоколадную конфету или шоколадку?
         </div>
@@ -1740,17 +1742,39 @@
             </div>
         </div>
         <div class="operation-action">
-            <button class="btn-modal-second green" onclick="manipWindow.closeOperation()">Да</button>
-            <button class="btn-modal-second" onclick="manipWindow.closeOperation()">Нет</button>
+            <button class="btn-modal-second green" data-btn="yes">Да</button>
+            <button class="btn-modal-second" data-btn="no">Нет</button>
         </div>
         <div class="modal-error succes d-none" style="max-width: 100%;">
             <div class="modal-error_text">Действие верное!</div>
+            <div style="display: flex;align-items: center;gap:40px;margin-top:40px">
+                <div class="icon">
+                    <svg width="64" height="65" viewBox="0 0 64 65" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M1.89471 28.1426C0.848277 28.1426 0 28.991 0 30.0373V57.8659C0 58.9124 0.848402 59.7606 1.89471 59.7606H13.3101V28.1426H1.89471Z" fill="#F5F5F5"/>
+                    <path d="M64.0005 38.6031C64.0005 36.1978 62.7082 34.0887 60.7814 32.9336C61.5196 31.8676 61.9526 30.5745 61.9526 29.1826C61.9526 25.5406 58.9896 22.5776 55.3476 22.5776H41.4047C41.832 20.6411 42.4164 17.7353 42.8234 14.6933C43.8824 6.77709 43.1586 2.38684 40.5458 0.877058C38.9168 -0.0640404 37.1604 -0.254937 35.6002 0.339019C34.3949 0.798122 32.7671 1.92686 31.8396 4.69712L28.175 14.2921C26.3172 18.8803 20.6279 23.6971 17.0996 26.3605V60.5966C23.6389 62.8878 30.4626 64.0492 37.4242 64.0492H52.6167C56.2586 64.0492 59.2216 61.0862 59.2216 57.4443C59.2216 56.1689 58.8582 54.9768 58.2296 53.9661C60.4314 52.8938 61.9523 50.6328 61.9523 48.0237C61.9523 46.6316 61.5194 45.3387 60.7812 44.2727C62.7082 43.1175 64.0005 41.0083 64.0005 38.6031Z" fill="#F5F5F5"/>
+                    </svg>
+                </div>
+                <div>
+                    <p style="margin:0 5px">Состояние Димы улучшилось.</p>
+                    <p style="margin:0 5px">Сознание полностью восстановилось.</p>
+                    <p style="margin:0 5px">Глюкометрия = 5,2 ммоль/л</p>
+                </div>
+            </div>
             <div class="modal-error_action">
-                <button class="btn-error green">Резюме</button>
+                <button class="btn-error green" onclick="sweetModal.finalChoco()">Резюме</button>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/app.js?v=2"></script>
+    <div style="width: 100%;height: 100%;position:absolute;top:0;left:0;display: flex;justify-content: center;align-items: center;" class="d-none">
+        <div class="modal-resume animate__animated animate__fast" id="modal-resume">
+            <div class="resume-caption">Резюме</div>
+            <div class="resume-content"></div>
+            <div class="resume-action">
+                <button class="btn-modal-second green" onclick="resume.finish()">Пройти еще раз</button>
+            </div>
+        </div>
+    </div>
+    <script type="text/javascript" src="js/app.js?v=3"></script>
 </body>
 
 </html>
