--- a/school/index.html
+++ b/school/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width">
     <link rel="stylesheet" type="text/css" href="css/font.css">
     <link rel="stylesheet" type="text/css" href="css/animate.min.css">
-    <link rel="stylesheet" type="text/css" href="css/app.css?v=6">
+    <link rel="stylesheet" type="text/css" href="css/app.css?v=7">
     <title>mpro-school-game</title>
 <style>
     text{
@@ -1537,7 +1537,7 @@
                 <button class="btn-error" onclick="doctorWin.closeErrorWin()">Закрыть</button>
             </div>
         </div>
-        <p class="t-center" style="font-size: 24px;margin-top: 0;">Доступные инструменты</p>
+        <p class="t-center" style="font-size: 24px;margin-top: 0;">Доступные обследования</p>
         <div class="modal-doctor_content">
             <div class="modal-doctor_content_item" onclick="doctorWin.openInspect(0)">
                 <div class="item_svg">
@@ -1991,7 +1991,7 @@
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="js/app.js?v=6"></script>
+    <script type="text/javascript" src="js/app.js?v=7"></script>
 </body>
 
 </html>
