--- a/instr/index.html
+++ b/instr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" href="css/app.css?v=2">
+    <link rel="stylesheet" href="css/app.css?v=3">
 </head>
 <body>
 <div class="modal-bd" id="modalGood">
@@ -359,9 +359,9 @@
     </div>
 </div>
 </body>
-<script src="js/app-const.js?v=2"></script>
-<script src="js/zoomWin.js?v=2"></script>
-<script src="js/app.js?v=2"></script>
+<script src="js/app-const.js"></script>
+<script src="js/zoomWin.js"></script>
+<script src="js/app.js?v=3"></script>
 <script>
     document.querySelectorAll('.image_box').forEach((item)=>{
         item.addEventListener('click', function(){zoomWin.open(item.dataset.img)});
