--- a/instr/index.html
+++ b/instr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/font.css">
-    <link rel="stylesheet" href="css/app.css?v=4">
+    <link rel="stylesheet" href="css/app.css?v=5">
 </head>
 <body>
 <div class="modal-bd" id="modalGood">
@@ -94,6 +94,15 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
+                    <div class="image_box" data-img="030" disabled>
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/030.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
                     <div class="image_box" data-img="005">
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
@@ -121,19 +130,28 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
-                    <div class="image_box" data-img="008">
+                    <div class="image_box" data-img="026" disabled>
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/008.svg" height="100%" width="100%" alt="">
+                            <img src="img/026.svg" height="100%" width="100%" alt="">
                         </div>
                         <div class="action">
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
-                    <div class="image_box" data-img="009">
+                    <div class="image_box" data-img="028" disabled>
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/009.svg" height="100%" width="100%" alt="">
+                            <img src="img/028.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
+                    <div class="image_box" data-img="011">
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/011.svg" height="100%" width="100%" alt="">
                         </div>
                         <div class="action">
                             <button class="btn">Добавить в набор</button>
@@ -148,10 +166,51 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
-                    <div class="image_box" data-img="011">
+                    <div class="image_box" data-img="025" disabled>
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/011.svg" height="100%" width="100%" alt="">
+                            <img src="img/025.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
+                    <div class="image_box" data-img="027" disabled>
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/027.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
+                    <div class="image_box" data-img="029" disabled>
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/029.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
+
+
+
+                </div>
+                <div class="row">
+                    <div class="image_box" data-img="008">
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/008.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
+                    <div class="image_box" data-img="009">
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/009.svg" height="100%" width="100%" alt="">
                         </div>
                         <div class="action">
                             <button class="btn">Добавить в набор</button>
@@ -175,6 +234,15 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
+                    <div class="image_box" data-img="018" disabled>
+                        <div class="img-wrap">
+                            <img class="plus-svg" src="img/zoom.svg" alt="">
+                            <img src="img/018.svg" height="100%" width="100%" alt="">
+                        </div>
+                        <div class="action">
+                            <button class="btn">Добавить в набор</button>
+                        </div>
+                    </div>
                     <div class="image_box" data-img="014">
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
@@ -193,8 +261,6 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
-                </div>
-                <div class="row">
                     <div class="image_box"  data-img="016">
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
@@ -213,10 +279,10 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
-                    <div class="image_box" data-img="018" disabled>
+                    <div class="image_box" data-img="021" disabled>
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/018.svg" height="100%" width="100%" alt="">
+                            <img src="img/021.svg" height="100%" width="100%" alt="">
                         </div>
                         <div class="action">
                             <button class="btn">Добавить в набор</button>
@@ -235,15 +301,6 @@
                         <div class="img-wrap">
                             <img class="plus-svg" src="img/zoom.svg" alt="">
                             <img src="img/020.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
-                    <div class="image_box" data-img="021" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/021.svg" height="100%" width="100%" alt="">
                         </div>
                         <div class="action">
                             <button class="btn">Добавить в набор</button>
@@ -276,60 +333,10 @@
                             <button class="btn">Добавить в набор</button>
                         </div>
                     </div>
-                    <div class="image_box" data-img="025" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/025.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
-                    <div class="image_box" data-img="026" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/026.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
-                    <div class="image_box" data-img="027" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/027.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
-                    <div class="image_box" data-img="028" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/028.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
-                    <div class="image_box" data-img="029" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/029.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
-                    <div class="image_box" data-img="030" disabled>
-                        <div class="img-wrap">
-                            <img class="plus-svg" src="img/zoom.svg" alt="">
-                            <img src="img/030.svg" height="100%" width="100%" alt="">
-                        </div>
-                        <div class="action">
-                            <button class="btn">Добавить в набор</button>
-                        </div>
-                    </div>
+
+
+
+
                 </div>
             </div>
             <div class="conteiner-content_arrow" onclick="scrollRow.scrollRight()">
@@ -347,12 +354,13 @@
             <div class="conteiner-content_box" style="flex: unset;">
             <button class="btn-3d" onclick="tooltipy.toogleTooltip()" id="toggleTooltipBtn">Включить названия инструментов</button>
             <button class="btn-3d" onclick="startWindow.open()">Вернуться в меню</button>
-            <button class="btn-3d btn-success" onclick="finalLevel()">Завершить</button>
+            <button class="btn-3d btn-disable" onclick="finalLevel()" id="finalBtn">Завершить</button>
             </div>
         </div>
     </div>
 </div>
 <div id="tooltip" class="tooltip"></div>
+<div id="tooltipForBtn" class="tooltip"></div>
 <div class="modal-start_wrap" id="startWindow">
     <div class="modal-start">
         <div class="modal-start_header">
@@ -371,9 +379,9 @@
     </div>
 </div>
 </body>
-<script src="js/app-const.js"></script>
-<script src="js/zoomWin.js?v=4"></script>
-<script src="js/app.js?v=4"></script>
+<script src="js/app-const.js?v=5"></script>
+<script src="js/zoomWin.js?v=5"></script>
+<script src="js/app.js?v=5"></script>
 <script>
     document.querySelectorAll('.image_box').forEach((item)=>{
         item.addEventListener('click', function(){zoomWin.open(item.dataset.img)});
