--- a/instr/index.html
+++ b/instr/index.html
@@ -367,12 +367,12 @@
             <h3>Набор инструментов</h3>
         </div>
         <div class="modal-start_content">
-            <div style="font-size: 20px;">Выберете режим</div>
+            <div style="font-size: 20px;">Выберите режим</div>
             <div class="tabs">
                 <button class="btn-3d tab-left btn-success" id="btnLearn">Обучение</button>
                 <button class="btn-3d tab-right" id="btnTest">Тест</button>
             </div>
-            <div style="font-size: 20px;">Выберете тест набора инструментов</div>
+            <div style="font-size: 20px;">Выберите тест набора инструментов</div>
             <button class="btn-3d btn-info" onclick="startWindow.setLevel(LEVELS.LEVEL_1)">Трахеостомия</button>
             <button class="btn-3d btn-info" onclick="startWindow.setLevel(LEVELS.LEVEL_2)">Аппендэктомия</button>
         </div>
