--- a/happy-birthday/index.html
+++ b/happy-birthday/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <title>CodePen - Happy Birthday, Настеныч!</title>
   <link rel="stylesheet" href="./style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link
+		href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+		rel="stylesheet">
+		<style>
+			*{
+				font-family: 'font-family: "PT Sans", sans-serif;';
+			}
+		</style>
 
 </head>
 <body>
@@ -142,11 +152,11 @@
 			      </g>
 			      <path id="path8424" d="M583.968 120.413c-2.63-.372-4.567-2.707-4.406-5.402.987-16.38-13.415-23.287-13.56-23.357-2.576-1.197-3.69-4.258-2.49-6.833 1.2-2.573 4.26-3.688 6.836-2.492.853.403 20.886 10.017 19.483 33.303-.17 2.835-2.607 4.996-5.444 4.825-.14-.006-.282-.022-.418-.042" opacity=".5" fill="#fff"/>
 			      <path d="M542.857 198.38H557.5" id="balloon-knot" fill="none" fill-rule="evenodd" stroke="#000" stroke-width="3" stroke-linecap="round"/>
-			      <text font-size="18" fill="#fff" x="516" y="142" opacity="0.4">Потяни</text>
+			      <text font-size="18" fill="#fff" x="516" y="142" opacity="0.4">Настнычь</text>
 			    </g>
 
 			    <text id="greeting" y="521.237" x="608.571" style="line-height:125%;cursor:pointer;" font-size="40" font-family="sans-serif" letter-spacing="0" word-spacing="0" fill="#67abdf">
-			      <tspan style="-inkscape-font-specification:'Apple Boy BTN'" y="521.237" x="608.571" id="tspan9612" font-size="50" font-family="Apple Boy BTN">Happy <tspan id="tspan9766" fill="#e4345b">6th</tspan>!!!</tspan>
+			      <tspan y="700" x="250" id="tspan9612" font-size="50" font-family="Apple Boy BTN">Happy <tspan id="tspan9766" fill="#e4345b">6th</tspan>!!!</tspan>
 			    </text>
 			  </g>
 			</svg>
