--- a/happy-birthday/index.html
+++ b/happy-birthday/index.html
@@ -3,18 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>С Днем рождения, Настеныч!</title>
-  <link rel="stylesheet" href="./style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link
-		href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-		rel="stylesheet">
-		<style>
-			*{
-				font-family: 'font-family: "PT Sans", sans-serif;';
-			}
-		</style>
-
+  <link rel="stylesheet" href="style.css">
+<style>
+.nunito-sans,
+.nameT {
+  font-family: "Nunito Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+</style>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -29,6 +26,7 @@
 						<path d="M643.083 234.335s12.296-13.853 52.376-13.853 52.376 13.853 52.376 13.853l-53.39 140.398-51.363-140.398z" id="path4748"/>
 					</clipPath>
 				</defs>
+				<text class="nameT" font-size="30" fill="tomato" x="310" y="0" opacity="0.9">Поздравляю очень</text>
 				<g id="shadow">
 					<ellipse id="path9506" cx="369.286" cy="601.952" rx="159.312" ry="17.883" opacity=".733" fill="#222629" fill-opacity=".562" stroke-width=".948" stroke-linecap="round"/>
 				</g>
@@ -152,11 +150,11 @@
 			      </g>
 			      <path id="path8424" d="M583.968 120.413c-2.63-.372-4.567-2.707-4.406-5.402.987-16.38-13.415-23.287-13.56-23.357-2.576-1.197-3.69-4.258-2.49-6.833 1.2-2.573 4.26-3.688 6.836-2.492.853.403 20.886 10.017 19.483 33.303-.17 2.835-2.607 4.996-5.444 4.825-.14-.006-.282-.022-.418-.042" opacity=".5" fill="#fff"/>
 			      <path d="M542.857 198.38H557.5" id="balloon-knot" fill="none" fill-rule="evenodd" stroke="#000" stroke-width="3" stroke-linecap="round"/>
-			      <text font-size="18" fill="#fff" x="516" y="142" opacity="0.4">Насть</text>
+			      <text class="nameT" font-size="18" style="fill: #FFEB3B;" fill="#00" x="500" y="142" opacity="0.9">Настенычь</text>
 			    </g>
 
 			    <text id="greeting" y="521.237" x="608.571" style="line-height:125%;cursor:pointer;" font-size="40" letter-spacing="0" word-spacing="0" fill="#67abdf">
-			      <tspan y="700" x="250" id="tspan9612" font-size="50">Улыбнись <tspan id="tspan9766" fill="#e4345b">и вперд</tspan>!!!</tspan>
+			      <tspan y="700" x="100" id="tspan9612" font-size="50">Улыбнись <tspan id="tspan9766" fill="#e4345b">и ха-ха-тать давай</tspan>!!!</tspan>
 			    </text>
 			  </g>
 			</svg>
