Игры со шрифтом

--- a/happy-birthday/index.html
+++ b/happy-birthday/index.html
@@ -17,7 +17,7 @@
 <!-- partial:index.partial.html -->
 <!-- Go gopher designed by Renee French -->
 <div id="container">
-			<svg id="main" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1052.3622 744.09448" id="svg2">
+			<svg id="main" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1052.3622 744.09448" id="svg2" width="100%" height="100%">
 				<defs id="defs4">
 					<clipPath id="clipPath4742"> <!-- unused: Delete -->
 						<path d="M643.083 374.733h104.753v-154.25H643.083v154.25z" id="path4744"/>
