--- a/happy-birthday/index.html
+++ b/happy-birthday/index.html
@@ -26,7 +26,7 @@
 						<path d="M643.083 234.335s12.296-13.853 52.376-13.853 52.376 13.853 52.376 13.853l-53.39 140.398-51.363-140.398z" id="path4748"/>
 					</clipPath>
 				</defs>
-				<text class="nameT" font-size="30" fill="tomato" x="310" y="0" opacity="0.9">Поздравляю очень</text>
+				<text id="start-text" class="nameT" font-size="30" fill="tomato" x="310" y="0" opacity="0.9">Поздравляю очень</text>
 				<g id="shadow">
 					<ellipse id="path9506" cx="369.286" cy="601.952" rx="159.312" ry="17.883" opacity=".733" fill="#222629" fill-opacity=".562" stroke-width=".948" stroke-linecap="round"/>
 				</g>
